# portfolio

./: db.sqlite3  pyproject.toml  requirements.txt
adblock/: apps.py  forms.py  read_html.py  urls.py  views.py
phone_calls/: apps.py  forms.py  models.py  query.py  urls.py  views.py
phone_calls/migrations/: 0001_initial.py
portfolio/: settings.py  urls.py
recipe/: admin.py  forms.py  models.py  urls.py  views.py
recipe/migrations/: 0001_initial.py
static/: index.html  mail.php  rename_tags_to_work_with_Django.py  ЛС254392207369_номер79130112504_с_01062019_по_25062019.html
static/css/: style.css
static/templates/: details.html  error.html  main.html  success.html  upload.html
static/templates/adblock/: adblock_index.html
static/templates/recipes/: base_recipes.html  create_recipe.html  get_recipe.html  index.html
