[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "my site portfolio on Django"
authors = ["Anton Batishchev <antonbat125a@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.7.*"
Django = "^3.1.9"
beautifulsoup4 = "^4.8.2"
lxml = "^4.5.0"
pillow = "^7.0.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
